fix: remove z-index from main content style in MyToDoLight module

--- a/src/MyToDoLight.module.css
+++ b/src/MyToDoLight.module.css
@@ -38,7 +38,6 @@
     transition:  all 0.4s ease;
     background-color: #FCFBF8;
     position: relative;
-  z-index: 10;  
 
 }
 .mainContent{
